tests/baselines/reference/parserParameterList14.errors.txt
==== tests/cases/compiler/parserParameterList14.ts (1 errors) ====
    declare class C {
      foo(a = 1): void;
          ~~~~~
!!! parserParameterList14.ts(2,7): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.
    }